--- a/frontend/src/pages/secrateria/SecretariaDashboard.css
+++ b/frontend/src/pages/secrateria/SecretariaDashboard.css
@@ -1,11 +1,13 @@
-.dashboard-container {
+
+/* SecretariaDashboard.css */
+
+.dashboard-main {
   display: flex;
+  min-height: 100vh;
 }
 
 .dashboard-content {
-  margin-left: 250px; /* Same as sidebar width */
-  padding: 2rem;
   flex-grow: 1;
+  padding: 2rem;
   background-color: #f9f9f9;
-  min-height: 100vh;
 }
