--- a/frontend/src/components/user_homepage/Sidebar.css
+++ b/frontend/src/components/user_homepage/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
   width: 250px;
-  height: 100vh;
-  background-color: #e9e7e3; /* light beige */
+  min-height: 100vh;
+  background-color: rgb(233, 231, 227); /* light beige */
   color: rgb(13, 27, 42); /* dark blue */
   display: flex;
   flex-direction: column;
@@ -15,6 +15,8 @@
   margin-bottom: 2rem;
   font-size: 1.5rem;
   font-weight: bold;
+  
+  color: #0d1b2a; 
 }
 
 .sidebar-link {
@@ -26,6 +28,13 @@
   transition:
     background 0.2s,
     color 0.2s;
+    padding: 0.75rem 1rem;
+
+  border-radius: 6px;
+
+  transition: all 0.3s ease;
+
+  font-weight: 500;
 }
 
 .sidebar-link:hover,
