--- a/frontend/src/components/user_homepage/Sidebar.css
+++ b/frontend/src/components/user_homepage/Sidebar.css
@@ -1,6 +1,8 @@
 .sidebar {
   width: 250px;
-  height: 100vh;
+  /* min-height: 100vh;
+  height: 100%; */
+
   background-color: rgb(233, 231, 227); /* light beige */
   color: rgb(13, 27, 42); /* dark blue */
   display: flex;
